--- a/core/pom.xml
+++ b/core/pom.xml
@@ -128,6 +128,18 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.1.5</version>
+        <configuration>
+          <threads>2</threads>
+          <timestampedReports>false</timestampedReports>
+          <targetClasses>
+            <param>com.google.common.truth*</param>
+          </targetClasses>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
         <version>${gwt.version}</version>
