--- a/core/pom.xml
+++ b/core/pom.xml
@@ -128,18 +128,6 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.pitest</groupId>
-        <artifactId>pitest-maven</artifactId>
-        <version>1.1.5</version>
-        <configuration>
-          <threads>2</threads>
-          <timestampedReports>false</timestampedReports>
-          <targetClasses>
-            <param>com.google.common.truth*</param>
-          </targetClasses>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
         <version>${gwt.version}</version>
@@ -208,6 +196,34 @@
       <properties>
         <javadoc.param>-Xdoclint:none</javadoc.param>
       </properties>
+    </profile>
+    <profile>
+      <id>pitest</id>
+      <build>
+      <plugins>
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.1.6</version>
+        <executions>
+          <execution>
+            <id>pitest</id>
+            <phase>test</phase>
+            <goals>
+              <goal>mutationCoverage</goal>
+            </goals>
+          </execution>
+        </executions>  
+        <configuration>
+          <threads>2</threads>
+          <timestampedReports>false</timestampedReports>
+          <targetClasses>
+            <param>com.google.common.truth*</param>
+          </targetClasses>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
     </profile>
   </profiles>
 </project>
